--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <div class="container">
   <h1>🔮 ভবিষ্যৎ দেখতে আপনার finger scan করুন</h1>
+  <p class="sub">⚠️ সতর্কতা: সত্য জানা মানসিকভাবে ঝুঁকিপূর্ণ হতে পারে</p>
 
   <button id="scanBtn">👆 Finger Scan</button>
 
@@ -20,6 +21,7 @@
   <div id="videoBox" class="hidden">
     <video controls autoplay>
       <source src="video.mp4" type="video/mp4">
+      আপনার ব্রাউজার ভিডিও সাপোর্ট করে না।
     </video>
   </div>
 </div>
